--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900" rel="stylesheet"> 
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style-dash.css">
+	<link rel="stylesheet" href="style-dash.css">
 </head>
 <body>
 <!-- Wrapper start -->
@@ -88,7 +88,7 @@
 	</div>
 </div>
 <!-- Popup end -->
-<script src="js/jquery.min.js"></script>	
+<script src="jquery.min.js"></script>	
 <script type="text/javascript">
 	$(document).ready(function(){
 		$('#open-popup').click(function(){
