--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 			</div>
 			<div class="graph-part">
 				<div class="graph">
-					<img src="images/graph-1.png" alt="">					
+					<img src="graph-1.png" alt="">					
 				</div>
 				<div class="graph">
-					<img src="images/graph-2.png" alt="">
+					<img src="graph-2.png" alt="">
 				</div>
 			</div>
 		</div>
