--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="side-panel">
 		<div class="user-pic-detail">
 			<div class="user-pic">
-				<img src="images/user.png" alt="">
+				<img src="user.png" alt="">
 				<ul>
 					<li><a href="javascript:void(0)"> David white</a>
 						<ul>
